<resources>
    <string name="app_name">fee-front</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_no">学号</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="system_name">班费管理系统</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="setting_student_edit">编辑信息</string>
    <string name="setting_student_name">姓名:</string>
    <string name="setting_student_no">学号:</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_title">个人信息</string>
    <string name="title_class_list">班级列表</string>
    <string name="title_fee_list">账单列表</string>
    <string name="btn_fee_closed">查看归档</string>
    <string name="title_comment_list">问题列表</string>
    <string name="btn_comment_add">添加问题</string>
    <string name="add_fee_name">名称: </string>
    <string name="add_fee_acceptor">验收人: </string>
    <string name="add_fee_money">金额: </string>
    <string name="text_fee_image">实物照片</string>
    <string name="text_note_image">小票照片</string>
    <string name="add_fee_image">图片</string>
    <string name="add_fee_camera">add_fee_camera</string>
    <string name="add_note_image">小票图片</string>
    <string name="add_note_camera">add_note_camera</string>
    <string name="fee_add_confirm">确认</string>
    <string name="fee_delete_confirm">删除</string>
    <string name="add_comment_title">标题</string>
    <string name="add_comment_title_hint">请输入质疑的标题</string>
    <string name="add_comment_hint_content">质疑的具体内容…</string>
    <string name="add_comment_content">内容</string>
    <string name="add_comment_button">发布</string>
    <string name="detail_fee_title">班费详情</string>
    <string name="btn_check">查看质疑</string>
    <string name="class_name">班级名: </string>
    <string name="class_number">班级人数: </string>
    <string name="fee_name">支出名称: </string>
    <string name="fee_acceptor">验收人: </string>
    <string name="fee_money">金额: </string>
    <string name="fee_date">日期: </string>
    <string name="fee_image">班费实物图片</string>
    <string name="fee_add">添加账单</string>
    <string name="fee_add_clear">清空</string>
    <string name="comment_title">标题:</string>
    <string name="reply_content">内容:</string>
    <string name="comment_student">评论者:</string>
    <string name="navigation_fee_open">已激活</string>
    <string name="navigation_fee_close">已关闭</string>
    <string name="fee_item_delete">删除支出</string>
    <string name="fee_item_edit">编辑支出</string>
</resources>